Fixed squished image in news article
But this is temporary as its not recommended to align images on a table in a responsive website

--- a/www/sites/all/themes/immoklink_base/css/news.css
+++ b/www/sites/all/themes/immoklink_base/css/news.css
@@ -185,3 +185,7 @@ a.logo { padding: 15px 0 15px 10px !important; }
   .page-index img { height: 200px; }
 }
 
+/* Only need to apply for news article*/
+table td img {
+  max-width: inherit !important;
+}
